# icu-messageformat-2

./: Cargo.toml  README.md
src/: ast.rs  errors.rs  lib.rs  parse.rs
src/data_model/: errors.rs  mod.rs
src/data_model/elements/: annotation.rs  attribute.rs  declaration.rs  expression.rs  markup.rs  message.rs  mod.rs  pattern_element.rs  pattern_message.rs  primitives.rs  select_message.rs  variant.rs
