[package]
name = "icu-messageformat-2"
version = "0.1.0"
edition = "2021"
authors = ["Loris Sigrist"]
description = "This crate provides utilities for interacting with strings following the ICU Messageformat 2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.197", features = ["derive"], optional = true }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedandic = "deny"
nursery = "deny"
unwrap_used = "deny"

[features]
serde = ["dep:serde"]